add authorize for services

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ user=postgres.ipziaxmpqxplwkibpeof
 host=aws-1-ap-southeast-1.pooler.supabase.com
 port=5432
 dbname=postgres
+
+OPENAI_API_KEY=KEY
+SECRET_KEY=your-secret-for-jwt
