upload faq router

--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ dbname=postgres
 
 OPENAI_API_KEY=KEY
 SECRET_KEY=your-secret-for-jwt
+
+JSON_URL=r"D:\FPTUniversity\Practice_Python\viet_care_assistant\data\Mental_health.json"
